erDiagram
    direction LR

    USERS ||--o{ USER_AUTH_PROVIDERS : registers
    USERS ||--o{ USER_WORD_SCORES : tracks
    USERS ||--o{ WORDS : owns
    USERS ||--o{ CATEGORIES : owns
    CATEGORIES ||--o{ WORDS : contains
    WORDS ||--o{ USER_WORD_SCORES : scores

    USERS {
        bigint id PK
        string email "nullable"
        string username "nullable"
        timestamp created_at
    }

    USER_AUTH_PROVIDERS {
        int id PK
        bigint user_id FK
        string provider_name
        string provider_user_id
        string avatar_url "nullable"
    }

    CATEGORIES {
        bigint id PK
        string name "unique"
        bigint user_id FK
    }

    WORDS {
        bigint id PK
        string word
        string explanation "nullable"
        bigint category_id FK "nullable"
        bigint user_id FK
    }

    USER_WORD_SCORES {
        bigint id PK
        bigint user_id FK
        bigint word_id FK
        int quiz_score
        timestamp last_quizzed_at "nullable"
    }
